# finStar

./: README.md  pyproject.toml
tests/: conftest.py  constants.py  test_check_currency_code.py  test_check_iso_currency_code.py  test_number_check.py  test_validate_client.py
tests/client/: cbr_client.py  currency_code_client.py  iso_currency_code_client.py
tests/testresources/: catalog_currency_code.xml  catalog_iso_currency_code.xml  currency_course_xsd_original.xsd  currency_course_xsd_with_error.xsd
